--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "connect": "^3.7.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "request": "^2.88.2"
   }
